--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
     "version": 1,
     "newProjectRoot": "projects",
     "projects": {
-        "sirlab": {
+        "prueba": {
             "projectType": "application",
             "schematics": {
                 "@schematics/angular:component": {
@@ -17,7 +17,7 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
-                        "outputPath": "dist/sirlab",
+                        "outputPath": "dist/prueba",
                         "index": "src/index.html",
                         "main": "src/main.ts",
                         "polyfills": [
@@ -86,13 +86,13 @@
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "configurations": {
                         "production": {
-                            "browserTarget": "sirlab:build:production"
+                            "browserTarget": "prueba:build:production"
                         },
                         "development": {
-                            "browserTarget": "sirlab:build:development"
+                            "browserTarget": "prueba:build:development"
                         },
                         "qa": {
-                            "browserTarget": "sirlab:build:qa"
+                            "browserTarget": "prueba:build:qa"
                         }
                     },
                     "defaultConfiguration": "development"
@@ -100,7 +100,7 @@
                 "extract-i18n": {
                     "builder": "@angular-devkit/build-angular:extract-i18n",
                     "options": {
-                        "browserTarget": "sirlab:build"
+                        "browserTarget": "prueba:build"
                     }
                 },
                 "test": {
