--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^16.2.5",
     "@angular/router": "^16.2.0",
     "@auth0/angular-jwt": "^5.2.0",
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "@ngxs/devtools-plugin": "^3.8.1",
     "@ngxs/logger-plugin": "^3.8.1",
@@ -32,6 +33,7 @@
     "@popperjs/core": "^2.11.6",
     "@visurel/iconify-angular": "^11.0.0",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.11.2",
     "ng-recaptcha": "^12.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
